Add tuples + add functional interfaces + improve assertor